--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -31,8 +31,8 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint requests pytz invoke pytest
-        pip install ./target/wheels/euklid_rs-0.1.0-cp310-cp310-linux_x86_64.whl
+        pip install pylint pytest
+        pip install ./target/wheels/euklid_rs-0.1.0-cp310-cp310-manylinux_2_24_x86_64.whl
     - name: Lint tests
       run: |
         pylint tests/
