--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,5 @@ name = "euklid_rs"
 crate-type = ["cdylib"]
 
 [dependencies]
+nalgebra = "*"
 pyo3 = { version = "0.15.1", features = ["extension-module"] }
