--- a/.github/workflows/maturin.yml
+++ b/.github/workflows/maturin.yml
@@ -3,7 +3,7 @@ on: [push, pull_request]
 name: maturin
 
 jobs:
-  pytest:
+  maturin:
     name: maturin
     runs-on: ubuntu-latest
     strategy:
@@ -11,6 +11,10 @@ jobs:
         python-version: [ "3.10" ]
     steps:
     - uses: actions/checkout@v2
+    - name: Extract branch name
+      shell: bash
+      run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+      id: extract_branch
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
@@ -41,3 +45,78 @@ jobs:
       with:
         path: ./target
         key: ${{ github.sha }}
+
+  pylint:
+    name: pylint
+    needs: maturin
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.10"]
+
+    steps:
+    - name: git checkout
+      uses: actions/checkout@v2
+      with:
+        ref: ${{ steps.maturin.outputs.branch }}
+
+    - name: update ubuntu
+      run: |
+        sudo apt-get update -y
+    - name: cache maturin builds
+      uses: actions/cache@v2
+      id: restore-maturin-build
+      with:
+        path: ./target
+        key: ${{ github.sha }}
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install Dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install pylint pytest
+        pip install ./target/wheels/euklid_rs-0.1.0-cp310-cp310-manylinux_2_24_x86_64.whl
+    - name: Lint tests
+      run: |
+        pylint tests/
+
+  pytest:
+    name: pytest
+    runs-on: ubuntu-latest
+    needs: maturin
+    strategy:
+      matrix:
+        python-version: ["3.10"]
+
+    steps:
+    - name: update ubuntu
+      run: |
+        sudo apt-get update -y
+    - name: git checkout
+      uses: actions/checkout@v2
+      with:
+        ref: ${{ steps.maturin.outputs.branch }}
+    - name: cache maturin builds
+      uses: actions/cache@v2
+      id: restore-maturin-build
+      with:
+        path: ./target
+        key: ${{ github.sha }}
+    - name: copy euklid_rs
+      run: |
+        ls ./target/wheels/
+        cp ./target/wheels/euklid_rs-0.1.0-cp310-cp310-manylinux_2_24_x86_64.whl .
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install Dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install --no-cache-dir -r ./requirements.txt
+        pip install euklid_rs-0.1.0-cp310-cp310-manylinux_2_24_x86_64.whl
+    - name: Test with pytest
+      run: |
+        pytest --cov=py_euklid_rs ./tests/
