chore(github-ci): rstest depending on branch

--- a/.github/workflows/rstest.yml
+++ b/.github/workflows/rstest.yml
@@ -1,6 +1,11 @@
-on: [push, pull_request]
+on:
+  pull_request:
+    types: [opened, synchronize, reopened]
+  push:
+    branches:
+      - main
 
-name: cargo test
+name: rstest
 
 jobs:  
   rstest:
