--- a/.github/workflows/maturin.yml
+++ b/.github/workflows/maturin.yml
@@ -81,7 +81,7 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint pytest
+        pip install --no-cache-dir -r ./requirements.txt
         pip install ./target/wheels/euklid_rs-0.1.0-cp310-cp310-manylinux_2_24_x86_64.whl
     - name: Lint tests
       run: |
