--- a/.github/workflows/maturin.yml
+++ b/.github/workflows/maturin.yml
@@ -44,6 +44,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install maturin
         maturin build
+        ls ./target/wheels/
     - name: cache maturin builds
       uses: actions/cache@v2
       id: restore-maturin-build
@@ -80,6 +81,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install Dependencies
       run: |
+        ls ./target/wheels/
         python -m pip install --upgrade pip
         pip install --no-cache-dir -r ./requirements.txt
         pip install ./target/wheels/euklid_rs-0.1.0-cp310-cp310-manylinux_2_24_x86_64.whl
